--- a/templates/jaehyuk.html
+++ b/templates/jaehyuk.html
@@ -212,10 +212,20 @@
                     />
                 </div>
                 <div class="team_comment">
-                    <h1>이름</h1>
-                    <p>취미</p>
-                    <p>한마디</p>
-                    <p>블로그 url</p>
+                    <h1>Name : 이재혁</h1>
+                    <br/>
+                    <br/>
+                    <p>Age : 20</p>
+                    <br/>
+                    <p>Tmi : 멍 때리기</p>
+                    <br/>
+                    <p>Favorite food: 치즈피자</p>
+                    <br/>
+                    <p>Comment : 안녕하세요 저는 팀 프로젝트의 <br>
+                        삭제, 저장, 조회 기능을 구현했습니다
+                    </p>
+                    <br/>
+                    <p>Blog url : <a href="https://velog.io/@marshmellos">https://velog.io/@marshmellos</a></p>
                 </div>
             </div>
         </div>
