제대로 가동되는 ver.1

--- a/templates/index.html
+++ b/templates/index.html
@@ -208,15 +208,31 @@
                     .then((res) => res.json())
                     .then((data) => {
                         let rows = data['result'];
-                        $('#member-body').empty();
                         rows.forEach((a) => {
                             let name = a['name'];
-
-                            let temp_html = `<div class="member-body">
-                                                    <h5 class="member-name">${name}</h5>
-                                                    <button onclick="deletemember('${name}')" type="button" class="btn btn-dark">삭제하기</button>
+                            let id = a['member_id'];
+                            let image = a['image'];
+                            let temp_html = `<div class="col">
+                                                <div class="card h-100">
+                                                    <a href="/members/${id}">
+                                                        <img
+                                                            src="${image}"
+                                                            class="card-img-top"
+                                                        />
+                                                    </a>
+                                                    <div class="member-body">
+                                                        <h5 class="member-name">${name}</h5>
+                                                        <button
+                                                            onclick="deletemember('${name}')"
+                                                            type="button"
+                                                            class="btn btn-dark"
+                                                        >
+                                                            삭제하기
+                                                        </button>
+                                                    </div>
+                                                </div>
                                             </div>`;
-                            $('#member-body').append(temp_html);
+                            $('#cards-box').append(temp_html);
                         });
                     })
                     .catch((error) => {
@@ -315,28 +331,7 @@
             </div>
         </div>
         <div class="mycards">
-            <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
-                <div class="col">
-                    <div class="card h-100">
-                        <a href="/siho">
-                            <img
-                                src="https://devjeans-photo.s3.amazonaws.com/2023-05-17T23:50:53.789442bunny.jpg"
-                                class="card-img-top"
-                            />
-                        </a>
-                        <div class="member-body">
-                            <h5 class="member-name">이름이 들어갑니다</h5>
-                            <button
-                                onclick="deletemember('${name}')"
-                                type="button"
-                                class="btn btn-dark"
-                            >
-                                삭제하기
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box"></div>
         </div>
     </body>
 </html>
