--- a/templates/member.html
+++ b/templates/member.html
@@ -126,34 +126,64 @@
         </style>
         <script>
             $(document).ready(function () {
-                show_comment();
+                show_comment({{member.member_id}});
             });
 
             function save_comment() {
-                let nickname = $('#nickname').val();
-                let comment = $('#comment').val();
-                if (!nickname && !comment) {
-                    alert('닉네임과 댓글을 입력하시오.');
-                } else if (!comment) {
-                    alert('댓글을 입력하시오.');
-                } else if (!nickname) {
-                    alert('닉네임을 입력하시오.');
-                } else {
-                    let id_give = 1;
+                {
+                    let memberid = {{member.member_id}}
+                    console.log(memberid)
+                    let nickname = $('#nickname').val();
+                    let comment = $('#comment').val();
 
                     $.ajax({
-                        type: 'POST',
-                        url: '/subpage/commentid',
-                        data: {
-                            id_give: id_give,
-                            nickname_give: nickname,
-                            comment_give: comment,
-                        },
-                        success: function (response) {
-                            window.location.reload();
-                            alert(response['msg']);
-                        },
+                            type: 'POST',
+                            url: `/members/${memberid}/comments`,
+                            data: {
+                                nickname_give: nickname,
+                                comment_give: comment,
+                            },
+                            success: function (response) {
+                                window.location.reload();
+                                alert(response['msg']);
+                            },
                     });
+                    // fetch('/members')
+                    //     .then((res) => res.json())
+                    //     .then((data) => {
+                    //         let rows = data['result'];
+                    //         rows.forEach((a) => {
+                    //             let id = a['member_id'];
+                    //             let nickname = $('#nickname').val();
+                    //             let comment = $('#comment').val();
+                    //             if (!nickname && !comment) {
+                    //                 alert('닉네임과 댓글을 입력하시오.');
+                    //             } else if (!comment) {
+                    //                 alert('댓글을 입력하시오.');
+                    //             } else if (!nickname) {
+                    //                 alert('닉네임을 입력하시오.');
+                    //             } else {
+                    //                 let id_give = id;
+                    //                 $.ajax({
+                    //                     type: 'POST',
+                    //                     url: '/subpage/commentid',
+                    //                     data: {
+                    //                         id_give: id_give,
+                    //                         nickname_give: nickname,
+                    //                         comment_give: comment,
+                    //                     },
+                    //                     success: function (response) {
+                    //                         window.location.reload();
+                    //                         alert(response['msg']);
+                    //                     },
+                    //                 });
+                    //                 return false;
+                    //             }
+                    //         });
+                    //     })
+                    //     .catch((error) => {
+                    //         console.log(error);
+                    //     });
                 }
             }
 
@@ -172,8 +202,8 @@
                     });
             }
 
-            function show_comment() {
-                fetch('/subpage/comment')
+            function show_comment(id) {
+                fetch(`/members/${id}/comments`)
                     .then((res) => res.json())
                     .then((data) => {
                         let rows = data['result'];
