--- a/templates/member.html
+++ b/templates/member.html
@@ -116,78 +116,37 @@
     </style>
     <script>
         $(document).ready(function () {
-            show_comment({{ member.member_id }});
-            });
+            show_comment("{{ member.member_id }}");
+        });
 
         function save_comment() {
             {
-                let memberid = {{ member.member_id }
-            }
-            console.log(memberid)
-            let nickname = $('#nickname').val();
-            let comment = $('#comment').val();
+                let memberid = "{{ member.member_id }}"
+                let nickname = $('#nickname').val();
+                let comment = $('#comment').val();
 
-            $.ajax({
-                type: 'POST',
-                url: `/members/${memberid}/comments`,
-                data: {
-                    nickname_give: nickname,
-                    comment_give: comment,
-                },
-                success: function (response) {
-                    window.location.reload();
-                    alert(response['msg']);
-                },
-            });
-<<<<<<< HEAD
-=======
-            // fetch('/members')
-            //     .then((res) => res.json())
-            //     .then((data) => {
-            //         let rows = data['result'];
-            //         rows.forEach((a) => {
-            //             let id = a['member_id'];
-            //             let nickname = $('#nickname').val();
-            //             let comment = $('#comment').val();
-            //             if (!nickname && !comment) {
-            //                 alert('닉네임과 댓글을 입력하시오.');
-            //             } else if (!comment) {
-            //                 alert('댓글을 입력하시오.');
-            //             } else if (!nickname) {
-            //                 alert('닉네임을 입력하시오.');
-            //             } else {
-            //                 let id_give = id;
-            //                 $.ajax({
-            //                     type: 'POST',
-            //                     url: '/subpage/commentid',
-            //                     data: {
-            //                         id_give: id_give,
-            //                         nickname_give: nickname,
-            //                         comment_give: comment,
-            //                     },
-            //                     success: function (response) {
-            //                         window.location.reload();
-            //                         alert(response['msg']);
-            //                     },
-            //                 });
-            //                 return false;
-            //             }
-            //         });
-            //     })
-            //     .catch((error) => {
-            //         console.log(error);
-            //     });
->>>>>>> master
+                $.ajax({
+                    type: 'POST',
+                    url: `/members/${memberid}/comments`,
+                    data: {
+                        nickname_give: nickname,
+                        comment_give: comment,
+                    },
+                    success: function (response) {
+                        window.location.reload();
+                        alert(response['msg']);
+                    },
+                });
+            }
         }
-            }
 
-        function delete_comment(nickname) {
-            fetch('/subpage/nicknameid', {
-                method: 'POST',
+        function delete_comment(id) {
+            fetch(`/members/${id}/comments/delete`, {
+                method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ comment_give: nickname }),
+                body: JSON.stringify({ memberid_give: id }),
             })
                 .then((res) => res.json())
                 .then((data) => {
@@ -203,16 +162,16 @@
                     let rows = data['result'];
                     $('#comment-list').empty();
                     rows.forEach((a) => {
+                        let memberid = id;
                         let nickname = a['nickname'];
                         let comment = a['comment'];
-                        console.log(nickname, comment);
                         let temp_html = `<div class="card">
                                                 <div class="card-body">
                                                     <blockquote class="blockquote mb-0">
                                                         <p>${comment}</p>
                                                         <footer class="blockquote-footer">${nickname}</footer>
                                                     </blockquote>
-                                                    <button onclick="delete_comment('${nickname}')" type="button" class="btn btn-dark">
+                                                    <button onclick="delete_comment(${memberid})" type="button" class="btn btn-dark">
                                                         삭제
                                                     </button>
                                                 </div>
@@ -231,27 +190,19 @@
                 <img src="{{member.image}}" class="team_image" alt="brown couch" />
             </div>
             <div class="team_comment">
-                <h1>Name : {{member.name}}</h1>
+                <h1>- Name : {{member.name}}</h1>
                 <br />
                 <br />
-<<<<<<< HEAD
-                <p>self-introduction : {{member.selfintroduction}}</p>
+                <p>- self-introduction <br> {{member.selfintroduction}}</p>
                 <br />
-=======
->>>>>>> master
-                <p>hobby : {{member.hobby}}</p>
-                <br />
-                <p>Tmi : {{member.comment}}</p>
-                <br />
-                <p>Blog url : {{member.blog}}</p>
-<<<<<<< HEAD
-=======
-                <br />
-                <p>click<a target="_blank" href="https://velog.io/@marshmellos">
-                        <image src="https://pbs.twimg.com/profile_images/1228368893321736193/Ov0og7E8_400x400.jpg"
-                            height="40" width="40" style="border-radius: 8px;">
-                    </a></p>
->>>>>>> master
+                <p>- hobby <br> {{member.hobby}}</p>
+                <br>
+                <p>- TMI <br> {{member.tmi}}</p>
+                <a target="_blank" href="{{member.blog}}">
+                    <image
+                        src="https://velog.velcdn.com/images/velog/profile/9aa07f66-5fcd-41f4-84f2-91d73afcec28/green%20favicon.png"
+                        height="40" width="40" style="border-radius: 8px;">
+                </a>
             </div>
         </div>
     </div>
@@ -286,5 +237,7 @@
         </div>
     </div>
 </body>
+
+</html>
 
 </html>
