조원님탈주

--- a/templates/member.html
+++ b/templates/member.html
@@ -190,7 +190,7 @@
                 <img src="{{member.image}}" class="team_image" alt="brown couch" />
             </div>
             <div class="team_comment">
-                <h1>- Name : {{member.name}}</h1>
+                <h1>{{member.name}}</h1>
                 <br />
                 <br />
                 <p>- self-introduction <br> {{member.selfintroduction}}</p>
